--- a/sass/index.scss
+++ b/sass/index.scss
@@ -62,3 +62,72 @@ body{
    font-size: 1.5em;
   }
   
+
+  @media (max-width: 1440px) {
+   .pmat{
+      font-size: 3.5em;
+   }
+   .col-01{
+      height: 140px;
+      width: 260px;
+      margin: 10px;
+      font-size: 1.2em;
+   }
+   .col-01:hover{
+      height: 150px;
+      width: 270px;
+      font-size: 1.3em;
+   }
+  }
+
+  @media (max-width: 1024px) {
+   .pmat{
+      font-size: 3em;
+   }
+   .col-01{
+      height: 110px;
+      width: 200px;
+      font-size: 1em;
+      margin: 8px;
+   
+   }
+   .col-01:hover{
+      height: 120px;
+      width: 210px;
+      font-size: 1.1em;
+   }
+  }
+  @media (max-width: 768px) {
+   .pmat{
+      font-size: 2em;
+   }
+   .col-01{
+      height: 100px;
+      width: 170px;
+      font-size: 1em;
+      margin: 10px;
+   
+   }
+   .col-01:hover{
+      height: 110px;
+      width: 180px;
+      font-size: 1.1em;
+   }
+  }
+  @media (max-width: 425px) {
+   .pmat{
+      font-size: 1.5em;
+   }
+   .col-01{
+      height: 90px;
+      width: 120px;
+      font-size: 0.8em;
+      margin: 5px;
+   
+   }
+   .col-01:hover{
+      height: 110px;
+      width: 180px;
+      font-size: 0.9em;
+   }
+  }
