--- a/css/style.css
+++ b/css/style.css
@@ -71,70 +71,6 @@ body {
   font-size: 1.5em;
 }
 
-@media (max-width: 1440px) {
-  .pmat {
-    font-size: 3.5em;
-  }
-  .col-01 {
-    height: 140px;
-    width: 260px;
-    margin: 10px;
-    font-size: 1.2em;
-  }
-  .col-01:hover {
-    height: 150px;
-    width: 270px;
-    font-size: 1.3em;
-  }
-}
-@media (max-width: 1024px) {
-  .pmat {
-    font-size: 3em;
-  }
-  .col-01 {
-    height: 110px;
-    width: 200px;
-    font-size: 1em;
-    margin: 8px;
-  }
-  .col-01:hover {
-    height: 120px;
-    width: 210px;
-    font-size: 1.1em;
-  }
-}
-@media (max-width: 768px) {
-  .pmat {
-    font-size: 2em;
-  }
-  .col-01 {
-    height: 100px;
-    width: 170px;
-    font-size: 1em;
-    margin: 10px;
-  }
-  .col-01:hover {
-    height: 110px;
-    width: 180px;
-    font-size: 1.1em;
-  }
-}
-@media (max-width: 425px) {
-  .pmat {
-    font-size: 1.5em;
-  }
-  .col-01 {
-    height: 90px;
-    width: 120px;
-    font-size: 0.8em;
-    margin: 5px;
-  }
-  .col-01:hover {
-    height: 110px;
-    width: 180px;
-    font-size: 0.9em;
-  }
-}
 body {
   margin: 0px;
   background-color: rgb(217, 211, 99);
@@ -142,10 +78,6 @@ body {
 
 .container {
   margin: 10px;
-}
-
-a {
-  text-decoration: none;
 }
 
 #section-0 {
@@ -197,38 +129,40 @@ a:hover {
 
 .text {
   font-weight: 900;
-  color: black;
-  font-size: 1.3em;
+  color: rgb(0, 0, 0);
+  font-size: 1.2em;
 }
 
-/*radio*/
-#form_oui {
-  height: 30px;
-  width: 30px;
-}
-
-.imputHRS {
-  height: 30px;
-  width: 90px;
-  font-size: 20px;
-  color: blue;
-  font-weight: bolder;
-}
-
-.nomeForm {
-  height: 30px;
+.tailForm {
+  height: 35px;
   width: 250px;
-  font-size: 20px;
+  font-size: 1em;
   font-weight: bolder;
   color: blue;
+  border-radius: 5px;
+  box-shadow: 2px 2px rgb(142, 7, 7);
 }
 
-.telefone {
-  height: 30px;
-  width: 200px;
+#fhrs, #fhrs2, #fhrs3, #fhrs4, #fhrs5, #fhrs6 {
+  width: 100px;
+}
+
+#fdisp, #fdisp2, #fdisp3, #fdisp4, #fdisp5, #fdisp6 {
+  width: 60px;
+}
+
+#ftel, #ftel2, #ftel3, #ftel4, #ftel5, #ftel6 {
+  width: 220px;
+}
+
+.btn {
+  height: 35px;
+  width: 80px;
   font-size: 20px;
   font-weight: bolder;
   color: blue;
+  border-radius: 10px;
+  background-color: aquamarine;
 }
 
 .teste {
@@ -239,167 +173,6 @@ a:hover {
   background-size: contain;
 }
 
-/*--------------------------Resposividade--------------*/
-@media (max-width: 1550px) {
-  #section-0 {
-    font-size: 2em;
-  }
-  .menu {
-    font-size: 1em;
-  }
-  a:hover {
-    font-size: 1.1em;
-  }
-  .section1 {
-    margin-top: 5px;
-    font-size: 0.7em;
-  }
-  .text {
-    font-size: 1.6em;
-  }
-  /*radio*/
-  #form_oui {
-    height: 20px;
-    width: 20px;
-  }
-  .imputHRS {
-    height: 25px;
-    width: 65px;
-    font-size: 1.5em;
-  }
-  .nomeForm {
-    height: 25px;
-    width: 220px;
-    font-size: 1.5em;
-  }
-  .telefone {
-    height: 25px;
-    width: 130px;
-    font-size: 1.5em;
-  }
-  /*pagina em construcao*/
-  .teste {
-    height: 98vh;
-    width: 100vw;
-    background-image: url(/img/construcao-1000x750.png);
-    background-repeat: repeat;
-    background-size: contain;
-  }
-}
-@media (max-width: 1223px) {
-  #section-0 {
-    font-size: 1.5em;
-  }
-  .menu {
-    font-size: 0.7em;
-  }
-  a:hover {
-    font-size: 0.8em;
-  }
-  .section1 {
-    margin-top: 2px;
-    font-size: 0.7em;
-  }
-  .text {
-    font-size: 1.1em;
-  }
-  /*radio*/
-  #form_oui {
-    height: 15px;
-    width: 15px;
-  }
-  .imputHRS {
-    height: 15px;
-    width: 45px;
-    font-size: 1.1em;
-  }
-  .nomeForm {
-    height: 15px;
-    width: 160px;
-    font-size: 1.1em;
-  }
-  .telefone {
-    height: 15px;
-    width: 100px;
-    font-size: 1.1em;
-  }
-  /*pagina em construcao*/
-}
-@media (max-width: 893px) {
-  #section-0 {
-    font-size: 1.5em;
-  }
-  .menu {
-    font-size: 0.8em;
-  }
-  a:hover {
-    font-size: 0.9em;
-  }
-  .section1 {
-    margin-top: 3px;
-    font-size: 0.8em;
-  }
-  .text {
-    font-size: 1em;
-  }
-  /*radio*/
-  #form_oui {
-    height: 15px;
-    width: 15px;
-  }
-  .imputHRS {
-    height: 15px;
-    width: 30px;
-    font-size: 0.8em;
-  }
-  .nomeForm {
-    height: 15px;
-    width: 140px;
-    font-size: 0.8em;
-  }
-  .telefone {
-    height: 15px;
-    width: 80px;
-    font-size: 0.8em;
-  }
-}
-@media (max-width: 857px) {
-  #section-0 {
-    font-size: 1.5em;
-  }
-  .menu {
-    font-size: 0.8em;
-  }
-  a:hover {
-    font-size: 0.9em;
-  }
-  .section1 {
-    margin-top: 3px;
-    font-size: 0.8em;
-  }
-  .text {
-    font-size: 1em;
-  }
-  /*radio*/
-  #form_oui {
-    height: 15px;
-    width: 15px;
-  }
-  .imputHRS {
-    height: 15px;
-    width: 30px;
-    font-size: 0.8em;
-  }
-  .nomeForm {
-    height: 15px;
-    width: 140px;
-    font-size: 0.8em;
-  }
-  .telefone {
-    height: 15px;
-    width: 80px;
-    font-size: 0.8em;
-  }
-}
+/*---------------------------------------------*/
 
 /*# sourceMappingURL=style.css.map */
