--- a/public/sass/pages.scss
+++ b/public/sass/pages.scss
@@ -1,4 +1,3 @@
-
 body{
     margin: 0px;
     background-color: $quarta-color;
@@ -54,40 +53,36 @@ body{
     
     .text{
         font-weight: 900;
-        color: rgb(0, 0, 0);
-        font-size: 1.2em;
+        color: black;
+        font-size: 1.3em;
     }
     
-//Tamanho dos imput
-    .tailForm{
-        height: 35px;
+    /*radio*/
+    #form_oui {
+        height: 30px;
+        width: 30px;
+    }
+    .imputHRS{
+    height: 30px;
+    width: 90px;
+    font-size: 20px;
+    color: blue;
+    font-weight: bolder;
+    }
+    .nomeForm{
+        height: 30px;
         width: 250px;
-        font-size: 1em;
+        font-size: 20px;
         font-weight: bolder;
         color: blue;
-        border-radius: 5px;
-        box-shadow: 2px 2px rgb(142, 7, 7);
     }
-    #fhrs,#fhrs2,#fhrs3,#fhrs4,#fhrs5,#fhrs6{
-        width: 100px;
-    }
-    #fdisp,#fdisp2,#fdisp3,#fdisp4,#fdisp5,#fdisp6{
-        width: 60px;
-    }
-    #ftel,#ftel2,#ftel3,#ftel4,#ftel5,#ftel6{
-        width: 220px;
-    }
-
-    .btn{
-        height: 35px;
-        width: 80px;
-         font-size: 20px;
+    .telefone{
+        height: 30px;
+        width: 200px;
+        font-size: 20px;
         font-weight: bolder;
         color: blue;
-        border-radius: 10px;
-        background-color: aquamarine;
     }
-
 .teste{
     height: 98vh;
     width: 100vw;
