--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,6 +6,6 @@ sass --watch sass/style.sass:css/style.css
 
 /*Import variables*/
 @import"./variables.scss";
-@import"index.scss";
+@import"home.scss";
 @import"pages.scss";
-
+/*---------------------------------------------*/
