--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,6 @@
 /*
 para ativar o sass. 
-sass --watch sass/style.sass:css/style.css
+sass --watch sass/style.scss:css/style.css
 ------------------------------------------------
 */
 
