alteracao do typescript

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,5 +7,6 @@ sass --watch sass/style.scss:css/style.css
 /*Import variables*/
 @import"./variables.scss";
 @import"home.scss";
+@import"btnStayle.scss";
 @import"pages.scss";
 /*---------------------------------------------*/
