--- a/css/style.css
+++ b/css/style.css
@@ -61,14 +61,41 @@ body {
   font-size: 1.6em;
 }
 
-.link-a {
-  text-decoration: none;
-  font-size: 1.4em;
+#section-menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
-.link-a:hover {
+.btnstyle {
+  width: 140px;
+  height: 60px;
+  background-color: rgb(226, 159, 13);
+  font-size: 1em;
+  border-radius: 10px;
+  font-weight: 900;
+}
+
+.btn {
+  height: 60px;
+  width: 140px;
+  font-size: 1em;
+  font-weight: bolder;
+  color: blue;
+  border-radius: 10px;
+  background-color: aquamarine;
+}
+
+a {
   text-decoration: none;
-  font-size: 1.5em;
+}
+
+a:hover, .btn:hover {
+  font-size: 1.2em;
+}
+
+.btnstyle:hover, .btn:hover {
+  background-color: orange;
 }
 
 body {
@@ -87,7 +114,7 @@ body {
   justify-content: center;
   font-weight: bolder;
   font-size: 2.5em;
-  color: rgb(67, 65, 108);
+  color: blue;
 }
 
 .menu {
@@ -99,26 +126,10 @@ body {
   color: rgb(252, 172, 117);
 }
 
-a:hover {
-  font-size: 1.6em;
-}
-
 .section1 {
   display: flex;
   flex-direction: row;
   background-color: rgb(252, 172, 117);
-  align-items: last baseline;
-  justify-content: space-around;
-  border-style: solid;
-  border-width: 3px;
-  margin-top: 20px;
-  font-size: 1.6em;
-}
-
-.section2 {
-  display: flex;
-  flex-direction: row;
-  background-color: rgb(229, 225, 203);
   align-items: last baseline;
   justify-content: space-around;
   border-style: solid;
@@ -143,26 +154,16 @@ a:hover {
   box-shadow: 2px 2px rgb(142, 7, 7);
 }
 
-#fhrs, #fhrs2, #fhrs3, #fhrs4, #fhrs5, #fhrs6, #fhrs7, #fhrs8, #fhrs9, #fhrs10, #fhrs11, #fhrs12, #fhrs13, #fhrs14 {
+.fhrs {
   width: 100px;
 }
 
-#fdisp, #fdisp2, #fdisp3, #fdisp4, #fdisp5, #fdisp6, #fdisp7, #fdisp8, #fdisp9, #fdisp10, #fdisp11, #fdisp12, #fdisp13, #fdisp14 {
+.fdisp {
   width: 60px;
 }
 
-#ftel, #ftel2, #ftel3, #ftel4, #ftel5, #ftel6, #ftel7, #ftel8, #ftel9, #ftel10, #ftel11, #ftel12, #ftel13, #ftel14 {
+.ftel {
   width: 220px;
-}
-
-.btn {
-  height: 35px;
-  width: 80px;
-  font-size: 20px;
-  font-weight: bolder;
-  color: blue;
-  border-radius: 10px;
-  background-color: aquamarine;
 }
 
 .teste {
@@ -171,6 +172,10 @@ a:hover {
   background-image: url(/img/construcao-1000x750.png);
   background-repeat: repeat;
   background-size: contain;
+}
+
+.vide {
+  display: none;
 }
 
 /*---------------------------------------------*/
