--- a/sass/pages.scss
+++ b/sass/pages.scss
@@ -14,7 +14,7 @@ body{
         justify-content: center;
         font-weight: bolder;
         font-size: 2.5em;
-        color: $segunda-color;
+        color: blue;
       
     }
     
@@ -26,9 +26,7 @@ body{
         font-weight: bolder;
         color: $quita-color;
     }
-    a:hover{
-        font-size: 1.6em;
-    }
+ 
     .section1{
         display: flex;
         flex-direction: row;
@@ -40,18 +38,7 @@ body{
         margin-top: 20px;
         font-size: 1.6em;
     }
-    .section2{
-        display: flex;
-        flex-direction: row;
-        background-color: rgb(229, 225, 203);
-        align-items: last baseline;
-        justify-content: space-around;
-        border-style:solid;
-        border-width:3px;
-        margin-top: 20px;
-        font-size: 1.6em;
-    }
-    
+
     .text{
         font-weight: 900;
         color: rgb(0, 0, 0);
@@ -68,25 +55,17 @@ body{
         border-radius: 5px;
         box-shadow: 2px 2px rgb(142, 7, 7);
     }
-    #fhrs,#fhrs2,#fhrs3,#fhrs4,#fhrs5,#fhrs6,#fhrs7,#fhrs8,#fhrs9,#fhrs10,#fhrs11,#fhrs12,#fhrs13,#fhrs14{
+    .fhrs{
         width: 100px;
     }
-    #fdisp,#fdisp2,#fdisp3,#fdisp4,#fdisp5,#fdisp6,#fdisp7,#fdisp8,#fdisp9,#fdisp10,#fdisp11,#fdisp12,#fdisp13,#fdisp14{
+    .fdisp{
         width: 60px;
     }
-    #ftel,#ftel2,#ftel3,#ftel4,#ftel5,#ftel6,#ftel7,#ftel8,#ftel9,#ftel10,#ftel11,#ftel12,#ftel13,#ftel14{
+    .ftel{
         width: 220px;
     }
 
-    .btn{
-        height: 35px;
-        width: 80px;
-         font-size: 20px;
-        font-weight: bolder;
-        color: blue;
-        border-radius: 10px;
-        background-color: aquamarine;
-    }
+  
 
 .teste{
     height: 98vh;
@@ -94,4 +73,9 @@ body{
     background-image: url(/img/construcao-1000x750.png);
     background-repeat: repeat;
    background-size: contain;
+}
+
+//ESCONDER IMPUT VAZIO
+.vide{
+    display: none;
 }
